src/index.css
:root {
    color-scheme: dark;

    --corner-radius: 5px;
    --clickspot-width: 10px;

    --global-font: 'Consolas', 'Menlo', 'Cascadia Mono', monospace;
}

/* NOTE: supposedly, this is the highest-performance method to set global defaults for these rules */ 
html {
    font-family: var(--global-font) !important;
    box-sizing: border-box;
    overflow: hidden;
}

*, *::before, *::after {
    font-family: inherit;
    box-sizing: inherit;
}

body {
    display: flex;
    flex-direction: column;
}

button, select, input, textarea {
    appearance: none;
    outline: none;
}

button {
    padding: 5px;
    background: var(--accent);
    transition: background-color 100ms ease-in-out;
    border-radius: var(--corner-radius);
    border: 1px solid var(--dark-background-l);
}
    button:hover {
        background: var(--accent-hovered);
    }
    button:active {
        background: var(--accent-selected);
    }

a {
    color: var(--secondary);
    text-decoration: none;
}
    a:hover {
        color: var(--secondary-hovered);
    }
    a:hover:visited {
        color: var(--accent-hovered);
    }
    a:visited {
        color: var(--accent);
    }


.logo {
    height: 100px;
    border-radius: 15px;
}

@keyframes logo-spin {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

.emphasis {
    font-weight: 900;
    font-style: italic;
}

.shadowed {
    box-shadow: 0 0 1em #0008;
}
    .shadowed.hoverable:hover {
        box-shadow: 0 0 1em #000c;
    }

body {
    background: var(--dark-background);
    color: var(--dark-foreground);
}

.title-container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    text-align: left;
    gap: 1rem;
    padding: 1rem;
    width: fit-content;
}

.title-container h1, span {
    margin: 0;
}

.body-container {
    display: flex;
    flex-direction: column;
    flex: 1;
}

html, body, #root {
    height: 100%;
    margin: 0;
    padding: 0;
}

blockquote {
    margin: 2rem;
    padding: 10px 1rem;
    border-left: 4px solid var(--accent); 
    background: var(--dark-background-e);
    width: fit-content;
}
    blockquote p {
        margin: 0;
        color: var(--dark-foreground-l);
        font-style: italic;
    }

code {
    background: var(--dark-background-e);
    padding: 1px 3px;
    border: 1px solid var(--dark-background-l);
    border-radius: 3px;
}

main {
    display: grid;
    grid-template-columns: repeat(5, minmax(0, 1fr));
}
main > * {
    border: 1px solid var(--node-border);
    border-top-width: 1px;
}

.status-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
    background: var(--accent);
    height: 1rem;
    border-top: 1px solid var(--node-border);
}
    .status-bar svg {
        height: 1rem;
        width: 1rem;
    }

.home-tab {
    overflow-y: hidden;
    border-top: 1px solid var(--node-border);
}

